--- a/src/template.html
+++ b/src/template.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vanilla Starter</title>
-	</head>
-	<body>
-		<main>
-			<h1 class="site-title">Welcome to Vanilla Starter!</h1>
-		</main>
-	</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Vanilla Starter</title>
+    </head>
+    <body>
+        <main class="starter">
+            <h1 class="starter__title">Welcome to Vanilla Starter!</h1>
+        </main>
+    </body>
 </html>
