--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,21 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 		<title>Vanilla Starter</title>
 	</head>
 
 	<body>
 		<main class="starter">
+			<header class="starter__header">
+				<ul>
+					<li><a href="#">link 1</a></li>
+					<li><a href="#">link 2</a></li>
+					<!-- <li><a href="#">link 3</a></li> -->
+				</ul>
+			</header>
 			<h1 class="starter__title">Welcome to Vanilla Starter!</h1>
+			<!-- <h3>test</h3> -->
 		</main>
 	</body>
 </html>
